# Sam

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-GPU  README.md  TaskTemplate.yml  build.rs  docker-compose.yml  env-gpu.sh  release-armv7.sh  rustc-ice-2025-04-24T03_08_50-59595.txt  rustc-ice-2025-04-24T03_09_04-59606.txt  rustc-ice-2025-04-24T03_11_25-59831.txt  rustc-ice-2025-04-24T03_14_22-60158.txt  rustc-ice-2025-04-24T03_15_48-60431.txt  rustc-ice-2025-04-24T03_17_56-60695.txt  rustc-ice-2025-04-24T03_19_05-60900.txt  rustc-ice-2025-04-24T03_19_20-61117.txt  rustc-ice-2025-04-24T03_20_00-61290.txt  rustc-ice-2025-04-24T03_20_58-61474.txt  rustc-ice-2025-04-24T03_22_23-61664.txt  rustc-ice-2025-04-24T03_28_32-62171.txt  rustc-ice-2025-04-24T03_29_41-62390.txt  rustc-ice-2025-04-24T03_30_17-62535.txt  rustc-ice-2025-04-24T03_33_14-81585.txt  setup_env.sh  tch.sh  wwwscan.json
cfg/: index.txt
scripts/darknet/: Makefile
scripts/darknet/examples/: detector.c  go.c
scripts/darknet/src/: network.c  parser.c
scripts/sprec/: requirements.txt
src/: cli.rs  main.rs  sam.rs
src/cli/: commands.rs  helpers.rs  mod.rs
src/cli/commands/: crawler.rs  darknet.rs  docker.rs  llama.rs  misc.rs  pg.rs  redis.rs  spotify.rs  status.rs  tts.rs
src/lib/: mod.rs
src/lib/services/: chocolatey.rs  darknet.rs  http.rs  llama.rs  media.rs  mod.rs  pg.rs  rivescript.rs  snapcast.rs  sprec.rs  stt.rs  vcpkg.rs  who.rs
src/lib/services/emulators/: mod.rs  ps1.rs  retroarch.rs
src/lib/services/package_managers/: mod.rs
src/lib/services/package_managers/linux/: apt.rs  dnf.rs  mod.rs  pacman.rs  yum.rs  zypper.rs
src/lib/services/package_managers/osx/: brew.rs  macports.rs  mod.rs
src/lib/services/package_managers/windows/: chocolatey.rs  mod.rs  winget.rs
src/sam/: crawler.rs  http.rs  memory.rs  services.rs  setup.rs  tools.rs
src/sam/cli/: commands.rs  helpers.rs  mod.rs  spinner.rs  tui.rs
src/sam/cli/commands/: cd.rs  crawler.rs  darknet.rs  docker.rs  help.rs  lifx.rs  llama.rs  matter.rs  mdns.rs  misc.rs  p2p.rs  pg.rs  redis.rs  sms.rs  spotify.rs  status.rs  tts.rs
src/sam/http/: api.rs
src/sam/http/api/: humans.rs  io.rs  locations.rs  observations.rs  pets.rs  rooms.rs  services.rs  settings.rs  things.rs
src/sam/memory/: location.rs  mod.rs  observation.rs  pg.rs  room.rs  thing.rs
src/sam/memory/cache/: mod.rs  web_crawl.rs  web_crawl_ext_result.rs  web_sessions.rs  wikipedia_summary.rs
src/sam/memory/config/: file_storage_location.rs  mod.rs  service.rs  setting.rs
src/sam/memory/human/: face_encoding.rs  mod.rs  notification.rs
src/sam/memory/storage/: file.rs  mod.rs
src/sam/models/: classifier.rs  word_detector.rs
src/sam/services/: copilot.rs  crawler.rs  darknet.rs  docker.rs  dropbox.rs  git.rs  github.rs  image.rs  jupiter.rs  lifx.rs  llama.rs  matter.rs  mdns.rs  media.rs  notifications.rs  openai.rs  osf.rs  p2p.rs  pg.rs  redis.rs  rivescript.rs  rtsp.rs  snapcast.rs  socket.rs  sound.rs  spotify.rs  sprec.rs  storage.rs  stt.rs  tts.rs  whisper.rs  who.rs  youtube.rs
src/sam/services/crawler/: common_prefixes.txt  common_tlds.txt  common_tokens.txt  common_urls.txt  common_words.txt  job.rs  page.rs  runner.rs  service.rs
src/sam/services/image/: nst.rs  ocnn.rs  srgan.rs
src/sam/services/lifx/: lifx_api_server.rs
src/sam/services/media/: games.rs  image.rs  snapcast.rs  youtube.rs
src/sam/services/media/image/: nst.rs  srgan.rs
src/sam/services/sms/: mod.rs  plivo.rs  twilio.rs  vonage.rs
src/sam/services/stt/: whisper.rs
www/: gulp.sh  gulpfile.js  humans.html  index.html  locations.html  login.html  media.html  package-lock.json  package.json  pets.html  rooms.html  services.html  settings.html  setup.html  switch-to-dev.sh  switch-to-dist.sh  things.html
www/apps/console/: index.html
www/assets/css/: core.css
www/assets/css/console/: style.css
www/assets/fonts/press_start/: press_start.css
www/assets/js/: core.js  humans.js  locations.js  media.js  rooms.js  services.js  settings.js  setup.js  things.js  ui.js
www/assets/js/apps/: console.js  video_player.js
www/assets/js/services/: lifx.js  rtsp.js  socket.js  stt.js  tts.js
www/assets/js/widgets/: clock.js  files.js  games.js  notifications.js  observation_deck.js  oss.js  screensaver.js  search.js
www/assets/js/widgets/snapcast/: libflac.js  snapcontrol.js  snapstream.js
www/assets/wormbox-core/css/: wormbox.css  wormbox.min.css
