[package]
name = "sam"
version = "0.0.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0.133", features = ["derive"] }
log = "0.4.14"
simple_logger = { git = "https://github.com/PixelCoda/rust-simple_logger.git", version = "1.13.6" }
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.3", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = "0.2.1"
serde_postgres = "0.2.0"
threadpool = "1.8.1"
postgres = "0.19.2"
rouille = { version = "3.4.0" }
trust-dns-resolver = "0.20.3"
zip = "0.5.13"
shuteye = "0.3.3"
reqwest = { version = "0.11.2", default-features = false, features = ["rustls-tls", "blocking", "json", "multipart"] }
wikipedia = "0.3.4"
serde_json = "1.0.71"
sudo = "0.5"
lifx-rs = "0.1.29"
error-chain = "0.12.4"
thiserror = "1"
which = "7.0.3"
online = "4.0.0"
wav = "1.0.0"
portable-pty = "0.8"
matc  = { git = "https://github.com/ktheindifferent/rust-matc.git", version = "0.1.3" }
simple-websockets = "0.1.4"
hound = "3.4.0"
noise-gate = { git = "https://github.com/Michael-F-Bryan/noise-gate.git", version = "0.1.1-alpha.0" }
dasp = "0.11.0"
dropbox-sdk = { git = "https://github.com/PixelCoda/dropbox-sdk-rust.git", version = "0.16.2", features = ["dbx_files"] }
invidious = "0.4.0"
rustube = { version = "0.6.0", features = ["blocking"] }
whoami = "1.6.0"
anyhow = "1.0.66"
titlecase = "2.2.1"
opencl3 = "0.9.3"
colored = "3.0.0"
nanoid = "0.4"
crossterm = "0.29.0"
whisper-rs = "0.14.2"
tui-logger = "0.17.1"
rodio = "0.17"
futures = "0.3.31"
failure = "0.1.8"
palette = "0.7.6"
num_cpus = "1.16.0"
get_if_addrs = "0.5.3"
once_cell = "1.21.3"
serde_derive = "1.0.130"
sysinfo = "0.34.2"
colors-transform = "0.2.11"
scraper = "0.23.1"
regex = "1.11.1"
url = "2.5.4"

deadpool-redis = "0.13"
ratatui = "0.29"
num = "0.4"
num-bigint = "0.4"
chrono = "0.4"
num-traits = "0.2"
# Enable if you are still using env_logger
env_logger = "0.10.0"
base64 = "0.22.1"
git2 = "0.18"
lazy_static = "1.5.0"
dialoguer = "0.11.0"
nanorand = "0.7.0"
rayon = "1.10.0"
deadpool-postgres = "0.14.1"
tokio-stream = "0.1.17"
bollard = "0.15"
futures-util = "0.3.31"
postgres-native-tls = "0.5.1"
native-tls = "0.2.14"
mdns = "3.0.0"
libmdns = "0.9.1"
mdns-sd = "0.13.8"
[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls", "trust-dns-resolver/dns-over-rustls"]

[[bin]]
name = "installer"
test = false
bench = false

[lib]
name = "libsam"
path = "src/lib/mod.rs"
